test/stg/error/fun1.stg
-- empty function definition (need vars, arrow, expr)
un = FUN();
